[gd_scene load_steps=11 format=3 uid="uid://b6kkxlo5miuy4"]

[ext_resource type="Script" uid="uid://bbbnlosaie474" path="res://scripts/GameFlow/player_ui.gd" id="1_0kg7g"]
[ext_resource type="Theme" uid="uid://igcyj7c6fdln" path="res://assets/fonts/cutey_card_theme.tres" id="2_l1x0a"]
[ext_resource type="FontFile" uid="uid://dj85nkjpq655u" path="res://assets/fonts/cjkFonts-allseto-v1.11-2.ttf" id="3_08olu"]
[ext_resource type="FontFile" uid="uid://njwdfbe6i0ko" path="res://assets/fonts/Comicy.ttf" id="4_p7n3x"]

[sub_resource type="Animation" id="Animation_yxlcp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ErrorLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1iba3"]
resource_name = "show"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ErrorLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.96667, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebg2g"]
_data = {
&"RESET": SubResource("Animation_yxlcp"),
&"show": SubResource("Animation_1iba3")
}

[sub_resource type="Animation" id="Animation_2ofn6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -600)]
}

[sub_resource type="Animation" id="Animation_ebg2g"]
resource_name = "pop_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.8, 0.866667, 1),
"transitions": PackedFloat32Array(1.46409, 0.5, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, -180), Vector2(0, -140), Vector2(0, -140), Vector2(0, -110), Vector2(0, -600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xa025"]
_data = {
&"RESET": SubResource("Animation_2ofn6"),
&"pop_up": SubResource("Animation_ebg2g")
}

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0kg7g")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 29.0
offset_right = 105.0
offset_bottom = 84.0
theme = ExtResource("2_l1x0a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="RoundLabel" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 1283.28
offset_top = 12.0
offset_right = 1583.28
offset_bottom = 56.0
theme = ExtResource("2_l1x0a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Round: 1"
horizontal_alignment = 2

[node name="EndTurn" type="Button" parent="."]
layout_mode = 0
offset_left = 1369.0
offset_top = 800.0
offset_right = 1560.0
offset_bottom = 849.0
theme = ExtResource("2_l1x0a")
theme_override_font_sizes/font_size = 40
text = "End Turn"

[node name="RoundTimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1371.0
offset_top = 737.0
offset_right = 1566.0
offset_bottom = 778.0
theme = ExtResource("2_l1x0a")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Timer: 30"

[node name="ErrorMsg" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.178
anchor_right = 1.0
anchor_bottom = 0.494
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ErrorLabel" type="Label" parent="ErrorMsg"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_08olu")
theme_override_font_sizes/font_size = 40
text = "Error! Cannot place there, it's too wrong"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ErrorMsg"]
libraries = {
&"": SubResource("AnimationLibrary_ebg2g")
}

[node name="RoundMsg" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -600.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="RoundMsg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.5
offset_top = -48.5
offset_right = 230.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 36
theme_override_fonts/font = ExtResource("4_p7n3x")
theme_override_font_sizes/font_size = 100
text = "ROUND 1"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoundMsg"]
libraries = {
&"": SubResource("AnimationLibrary_xa025")
}

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
